feat: add ui buttons and refactor code into classes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
       <button id="next">next</button>
+      <button id="play">play</button>
+      <button id="stop">stop</button>
+      <input type="range" id="playbackSpeed" name="speed" min="1" max="5" />
+      <label for="speed">PlaybackSpeed</label>
       <h1 class="item">Cellular Automaton</h1>
       <canvas class="item" id="app"></canvas>
       <script class="item" src="index.js"></script>
